resize works (ai generated)

--- a/client/resources/index.html
+++ b/client/resources/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xterm_try</title>
     <link rel="stylesheet" href="./xterm.css">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+      }
+      #xterm-container {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 </head>
 <body>
   <div id="xterm-container">
