--- a/client/resources/index.html
+++ b/client/resources/index.html
@@ -13,14 +13,29 @@
         width: 100vw;
         overflow: hidden;
       }
-      #xterm-container {
-        width: 100%;
+      #xterm1{
+        border: 4px solid rebeccapurple;
+        background-color: rgb(139, 116, 161);
+        flex:1;
+      }
+      #xterm2 {
+        border: 4px solid rgb(231, 126, 35);
+        background-color: rgb(223, 188, 158);
+        flex:2;    
+       
+      }
+      
+      .splitter{
         height: 100%;
+        width: 100%;
+        display: flex;
       }
     </style>
 </head>
 <body>
-  <div id="xterm-container">
+  <div class="splitter">
+    <div id="xterm1"></div>
+    <div id="xterm2"></div>
   </div>
 </body>
 </html>
